--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -5,8 +5,8 @@
  *
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
-@import url(https://fonts.googleapis.com/css?family=Quicksand:400,700,400italic,700italic);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+@import url(https://fonts.font.im/css?family=Quicksand:400,700,400italic,700italic);
+@import url(https://fonts.font.im/css?family=Open+Sans:400italic,700italic,400,700);
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
