--- a/css/theme/beige.css
+++ b/css/theme/beige.css
@@ -18,8 +18,11 @@ body {
   background: radial-gradient(center, circle cover, white 0%, #f7f2d3 100%);
   background-color: #f7f3de; }
 
+.left {
+  text-align: left; }
+
 .reveal {
-  font-family: "Lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 40px;
   font-weight: normal;
   color: #333; }
@@ -47,16 +50,25 @@ body {
 .reveal h3,
 .reveal h4,
 .reveal h5,
-.reveal h6 {
+.reveal h6,
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #333;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
+
+.reveal .title {
+  font-weight: 100;
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 3.77em; }
