--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -14,6 +14,9 @@ body {
   background: #222;
   background-color: #222; }
 
+.left {
+  text-align: left; }
+
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 42px;
@@ -44,21 +47,24 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6,
-.reveal .title {
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #fff;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-weight: 200;
+  font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
 .reveal .title {
   font-weight: 100;
-  font-size: 1.8em;
-}
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 2.5em; }
