--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -20,6 +20,9 @@ body {
   background: radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background-color: #2b2b2b; }
 
+.left {
+  text-align: left; }
+
 .reveal {
   font-family: "Open Sans", sans-serif;
   font-size: 40px;
@@ -50,21 +53,24 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6,
-.reveal .title {
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #eee;
   font-family: "Quicksand", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  /* text-transform: uppercase; */
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
   word-wrap: break-word; }
 
 .reveal .title {
   font-weight: 100;
-  font-size: 1.8em;
-}
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 3.77em; }
@@ -78,8 +84,8 @@ body {
 .reveal h4 {
   font-size: 1em; }
 
-/* .reveal h1 {
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15); } */
+.reveal h1 {
+  text-shadow: none; }
 
 /*********************************************
  * OTHER
