--- a/css/theme/serif.css
+++ b/css/theme/serif.css
@@ -14,6 +14,9 @@ body {
   background: #F0F1EB;
   background-color: #F0F1EB; }
 
+.left {
+  text-align: left; }
+
 .reveal {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
   font-size: 40px;
@@ -43,16 +46,25 @@ body {
 .reveal h3,
 .reveal h4,
 .reveal h5,
-.reveal h6 {
+.reveal h6,
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #383D3D;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: none;
   text-shadow: none;
   word-wrap: break-word; }
+
+.reveal .title {
+  font-weight: 100;
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 3.77em; }
