--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -17,6 +17,9 @@ body {
   background: #fff;
   background-color: #fff; }
 
+.left {
+  text-align: left; }
+
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 40px;
@@ -46,16 +49,25 @@ body {
 .reveal h3,
 .reveal h4,
 .reveal h5,
-.reveal h6 {
+.reveal h6,
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #000;
   font-family: "News Cycle", Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: none;
   text-shadow: none;
   word-wrap: break-word; }
+
+.reveal .title {
+  font-weight: 100;
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 3.77em; }
