--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -21,6 +21,9 @@ body {
   background: radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
   background-color: #f7fbfc; }
 
+.left {
+  text-align: left; }
+
 .reveal {
   font-family: "Open Sans", sans-serif;
   font-size: 40px;
@@ -50,16 +53,25 @@ body {
 .reveal h3,
 .reveal h4,
 .reveal h5,
-.reveal h6 {
+.reveal h6,
+.reveal .title,
+.reveal .subtitle {
   margin: 0 0 20px 0;
   color: #333;
   font-family: "Quicksand", sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: -0.08em;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
+
+.reveal .title {
+  font-weight: 100;
+  font-size: 1.4em; }
+
+.reveal .subtitle {
+  font-weight: 100;
+  font-size: 0.9em !important; }
 
 .reveal h1 {
   font-size: 3.77em; }
