--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -9,6 +9,10 @@ body {
 	background-color: $backgroundColor;
 }
 
+.left {
+	text-align: left;
+}
+
 .reveal {
 	font-family: $mainFont;
 	font-size: $mainFontSize;
@@ -43,7 +47,9 @@ body {
 .reveal h3,
 .reveal h4,
 .reveal h5,
-.reveal h6 {
+.reveal h6,
+.reveal .title,
+.reveal .subtitle {
 	margin: $headingMargin;
 	color: $headingColor;
 
@@ -52,10 +58,20 @@ body {
 	line-height: $headingLineHeight;
 	letter-spacing: $headingLetterSpacing;
 
-	text-transform: $headingTextTransform;
+	// text-transform: $headingTextTransform;
 	text-shadow: $headingTextShadow;
 
 	word-wrap: break-word;
+}
+
+.reveal .title {
+	font-weight: 100;
+	font-size: 1.4em;
+}
+
+.reveal .subtitle {
+	font-weight: 100;
+	font-size: 0.9em !important;
 }
 
 .reveal h1 {font-size: $heading1Size; }
